--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <section class="scoreboard">
       <h3 id="scoreTitle">Score:</h3>
 
-      <div class="playerOne">
-        <h3 class="playerOneName">Player One</h3>
-        <p class="playerOneScore">0</p>
+      <div class="redTeam">
+        <h3 class="redTeamName">Red Team</h3>
+        <p class="redTeamScore">0</p>
       </div>
 
       <h4 class="vs">VS</h4>
 
-      <div class="playerTwo">
-        <h3 class="playerTwoName">Player Two</h3>
-        <p class="playerTwoScore">0</p>
+      <div class="blueTeam">
+        <h3 class="blueTeamName">Blue Team</h3>
+        <p class="blueTeamScore">0</p>
       </div>
     </section>
 
